# dal/roles_permissions/api.go
@@ -12,7 +12,7 @@ type RolesDal interface {
 	Delete(id primitive.ObjectID) error
 	GetByProjectID(projectID primitive.ObjectID) ([]*dbmodels.Roles, error)
 	DeleteByProjectID(projectID primitive.ObjectID) error
+	GetByProjectIDAndName(projectID primitive.ObjectID, name string) (*dbmodels.Roles, error)
 
-	UpdatePermission(id primitive.ObjectID, resource string, key string, value interface{}) error
-	RemovePermission(id primitive.ObjectID, resource string, key string) error
+	UpdatePermission(id primitive.ObjectID, resource string, actions []dbmodels.Action) error
 }
