# web/docs/swagger.yaml
@@ -4,62 +4,70 @@ definitions:
     properties:
       action:
         type: string
+      actions:
+        items:
+          $ref: '#/definitions/dbmodels.Action'
+        type: array
       description:
         type: string
     type: object
   dbmodels.AuditLog:
     properties:
-      Action:
+      action:
         description: Action taken (e.g., "Created Task", "Updated Milestone")
         type: string
-      Details:
+      details:
         description: Detailed description of the action
         type: string
-      Timestamp:
+      timestamp:
         description: When the action was performed
         type: string
-      UserID:
+      user_id:
         description: The user who performed the action
         type: string
     type: object
-  dbmodels.Permissions:
-    additionalProperties: true
+  dbmodels.Permission:
+    properties:
+      actions:
+        items:
+          $ref: '#/definitions/dbmodels.Action'
+        type: array
     type: object
   dbmodels.Project:
     properties:
-      AuditLogs:
+      audit_logs:
         description: Audit logs for project actions
         items:
           $ref: '#/definitions/dbmodels.AuditLog'
         type: array
-      CreatedTimestampUTC:
+      created_timestamp_utc:
         type: string
-      Deleted:
+      deleted:
         description: Flag to indicate if the project is deleted
         type: boolean
-      Description:
+      description:
         description: Description of the project
         type: string
-      Members:
+      id:
+        type: string
+      members:
         description: List of member IDs associated with the project
         items:
           type: string
         type: array
-      Name:
+      name:
         description: Project details
         type: string
-      OwnerID:
+      owner_id:
         description: Project owner (user ID)
         type: string
-      Slug:
+      slug:
         description: Slug for unique URL identification
         type: string
-      UpdatedTimestampUTC:
+      updated_timestamp_utc:
         type: string
-      WorkspaceID:
+      workspace_id:
         description: Reference to the workspace it belongs to
-        type: string
-      id:
         type: string
     type: object
   dbmodels.Resource:
@@ -90,7 +98,7 @@ definitions:
       project_id:
         type: string
       type:
-        type: string
+        $ref: '#/definitions/dbmodels.ResourceType'
       updated_timestamp_utc:
         type: string
       urn:
@@ -98,33 +106,43 @@ definitions:
       version:
         type: string
     type: object
+  dbmodels.ResourceType:
+    enum:
+    - db:mysql
+    - app:github
+    - llm:openai
+    type: string
+    x-enum-varnames:
+    - ResourceTypeDatabase
+    - ResourceTypeAPI
+    - ResourceTypeLLM
   dbmodels.Workspace:
     properties:
-      AuditLogs:
+      audit_logs:
         description: Audit logs for project actions
         items:
           $ref: '#/definitions/dbmodels.AuditLog'
         type: array
-      CreatedTimestampUTC:
+      created_timestamp_utc:
         type: string
-      Deleted:
+      deleted:
         type: boolean
-      Description:
+      description:
         type: string
-      Members:
+      id:
+        type: string
+      members:
         items:
           type: string
         type: array
-      Name:
+      name:
         description: Workspace details
         type: string
-      OwnerID:
+      owner_id:
         type: string
-      Slug:
+      slug:
         type: string
-      UpdatedTimestampUTC:
-        type: string
-      id:
+      updated_timestamp_utc:
         type: string
     type: object
   errorinterface.ErrorResponse:
@@ -326,76 +344,76 @@ definitions:
     type: object
   projects.ProjectRequest:
     properties:
-      AuditLogs:
+      audit_logs:
         description: Audit logs for project actions
         items:
           $ref: '#/definitions/dbmodels.AuditLog'
         type: array
-      CreatedTimestampUTC:
+      created_timestamp_utc:
         type: string
-      Deleted:
+      deleted:
         description: Flag to indicate if the project is deleted
         type: boolean
-      Description:
+      description:
         description: Description of the project
         type: string
-      Members:
+      id:
+        type: string
+      members:
         description: List of member IDs associated with the project
         items:
           type: string
         type: array
-      Name:
+      name:
         description: Project details
         type: string
-      OwnerID:
+      owner_id:
         description: Project owner (user ID)
         type: string
-      Slug:
+      slug:
         description: Slug for unique URL identification
         type: string
-      UpdatedTimestampUTC:
+      updated_timestamp_utc:
         type: string
-      WorkspaceID:
+      workspace_id:
         description: Reference to the workspace it belongs to
-        type: string
-      id:
         type: string
     type: object
   projects.ProjectResponse:
     properties:
-      AuditLogs:
+      audit_logs:
         description: Audit logs for project actions
         items:
           $ref: '#/definitions/dbmodels.AuditLog'
         type: array
-      CreatedTimestampUTC:
+      created_timestamp_utc:
         type: string
-      Deleted:
+      deleted:
         description: Flag to indicate if the project is deleted
         type: boolean
-      Description:
+      description:
         description: Description of the project
         type: string
-      Members:
+      id:
+        type: string
+      members:
         description: List of member IDs associated with the project
         items:
           type: string
         type: array
-      Name:
+      name:
         description: Project details
         type: string
-      OwnerID:
+      owner_id:
         description: Project owner (user ID)
         type: string
-      Slug:
+      slug:
         description: Slug for unique URL identification
         type: string
-      UpdatedTimestampUTC:
+      updated_timestamp_utc:
         type: string
-      WorkspaceID:
+      workspace_id:
         description: Reference to the workspace it belongs to
-        type: string
-      id:
         type: string
     type: object
   projects.ProjectsResponse:
@@ -433,7 +451,7 @@ definitions:
       project_id:
         type: string
       type:
-        type: string
+        $ref: '#/definitions/dbmodels.ResourceType'
       updated_timestamp_utc:
         type: string
       urn:
@@ -469,7 +487,7 @@ definitions:
       project_id:
         type: string
       type:
-        type: string
+        $ref: '#/definitions/dbmodels.ResourceType'
       updated_timestamp_utc:
         type: string
       urn:
@@ -501,7 +519,9 @@ definitions:
       owner_id:
         type: string
       permissions:
-        $ref: '#/definitions/dbmodels.Permissions'
+        additionalProperties:
+          $ref: '#/definitions/dbmodels.Permission'
+        type: object
       project_id:
         type: string
       role:
@@ -526,7 +546,9 @@ definitions:
       owner_id:
         type: string
       permissions:
-        $ref: '#/definitions/dbmodels.Permissions'
+        additionalProperties:
+          $ref: '#/definitions/dbmodels.Permission'
+        type: object
       project_id:
         type: string
       role:
@@ -534,13 +556,14 @@ definitions:
       updated_timestamp_utc:
         type: string
     type: object
-  roles_permissions.UpdateAttributeRequest:
+  roles_permissions.UpdatePermissionRequest:
     properties:
-      path:
-        type: string
+      actions:
+        items:
+          $ref: '#/definitions/dbmodels.Action'
+        type: array
       resource:
         type: string
-      value: {}
     type: object
   workspaces.AddMemberRequest:
     properties:
@@ -550,61 +573,61 @@ definitions:
   workspaces.WorkspaceRequest:
     description: Workspace request model
     properties:
-      AuditLogs:
+      audit_logs:
         description: Audit logs for project actions
         items:
           $ref: '#/definitions/dbmodels.AuditLog'
         type: array
-      CreatedTimestampUTC:
+      created_timestamp_utc:
         type: string
-      Deleted:
+      deleted:
         type: boolean
-      Description:
+      description:
         type: string
-      Members:
+      id:
+        type: string
+      members:
         items:
           type: string
         type: array
-      Name:
+      name:
         description: Workspace details
         type: string
-      OwnerID:
+      owner_id:
         type: string
-      Slug:
+      slug:
         type: string
-      UpdatedTimestampUTC:
-        type: string
-      id:
+      updated_timestamp_utc:
         type: string
     type: object
   workspaces.WorkspaceResponse:
     description: Workspace response model
     properties:
-      AuditLogs:
+      audit_logs:
         description: Audit logs for project actions
         items:
           $ref: '#/definitions/dbmodels.AuditLog'
         type: array
-      CreatedTimestampUTC:
+      created_timestamp_utc:
         type: string
-      Deleted:
+      deleted:
         type: boolean
-      Description:
+      description:
         type: string
-      Members:
+      id:
+        type: string
+      members:
         items:
           type: string
         type: array
-      Name:
+      name:
         description: Workspace details
         type: string
-      OwnerID:
+      owner_id:
         type: string
-      Slug:
+      slug:
         type: string
-      UpdatedTimestampUTC:
-        type: string
-      id:
+      updated_timestamp_utc:
         type: string
     type: object
   workspaces.WorkspacesResponse:
@@ -1462,39 +1485,6 @@ paths:
       tags:
       - roles
   /projects/{project_id}/roles/{role_id}/permissions:
-    delete:
-      consumes:
-      - application/json
-      description: Removes a specific attribute from a permission
-      parameters:
-      - description: Role ID
-        in: path
-        name: role_id
-        required: true
-        type: string
-      - description: Attribute path
-        in: path
-        name: path
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/errorinterface.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/errorinterface.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Remove permission attribute
-      tags:
-      - permissions
     put:
       consumes:
       - application/json
@@ -1510,7 +1500,7 @@ paths:
         name: attribute
         required: true
         schema:
-          $ref: '#/definitions/roles_permissions.UpdateAttributeRequest'
+          $ref: '#/definitions/roles_permissions.UpdatePermissionRequest'
       produces:
       - application/json
       responses:
